flux/apps/networking/netbird-crd-api/app/crd-api.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: eg-mesh
  namespace: ingress
spec:
  gatewayClassName: eg-public
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: eg-mesh
  listeners:
    - name: https
      port: 443
      protocol: HTTPS
      hostname: crd-api.ingress.${CLUSTER_ID}.${NETWORK}.spectrum
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: crd-api-mesh-tls
            namespace: observability
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: fluence
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: eg-mesh-crd-api-tls
  namespace: observability
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: ingress
  to:
    - group: ""
      kind: Secret
      name: crd-api-mesh-tls
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: crd-operator-api-mesh
  namespace: fluence
spec:
  hostnames:
    - crd-api.ingress.${CLUSTER_ID}.${NETWORK}.spectrum
  parentRefs:
    - name: eg-mesh
      namespace: ingress
      sectionName: https
  rules:
    - backendRefs:
        - name: crd-operator-api
          port: 8080
      matches:
        - path:
            type: PathPrefix
            value: /
